--- a/env.example
+++ b/env.example
@@ -3,3 +3,6 @@ SECRET_KEY=your_secret_key_here
 DATABASE_URL=sqlite:///./hire_match.db
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
+PINECONE_API_KEY=your_pinecone_api_key_here
+PINECONE_INDEX_NAME=hire-match-vectors
