--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
-bcrypt==4.3.0
+bcrypt==4.0.1
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
 click==8.2.1
 cryptography==45.0.7
 distro==1.9.0
+dnspython==2.7.0
 ecdsa==0.19.1
+email-validator==2.3.0
 faiss-cpu==1.12.0
 fastapi==0.116.1
 h11==0.16.0
@@ -28,6 +30,8 @@ passlib==1.7.4
 pdfminer.six==20250506
 pdfplumber==0.11.7
 pillow==11.3.0
+pinecone==7.0.1
+pinecone-plugin-interface==0.0.7
 pluggy==1.6.0
 pyasn1==0.6.1
 pycparser==2.22
@@ -37,6 +41,7 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 pypdfium2==4.30.0
 pytest==8.4.1
+python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
 python-jose==3.5.0
@@ -50,6 +55,7 @@ starlette==0.47.3
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+urllib3==2.5.0
 uvicorn==0.35.0
 uvloop==0.21.0
 watchfiles==1.1.0
